--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     max-width: 1920px;
     position: relative;
     margin: 0 auto;
+    overflow-x: hidden;
 }
 
 .order__snow {
@@ -1182,6 +1183,22 @@ a.btn {
         }
         .order__block {
             margin-left: 0;
+        }
+
+        .modal__content {
+            border-radius: 0;
+            max-width:100%;
+            height: 100%;
+            padding: 0 20px;
+            padding-top: 50%;
+        }
+
+        .modal__content.show-up {
+            margin-top: 0;
+        }
+
+        .modal__close {
+            top: 25%;
         }
     }
     
